arvan-paas/kaseb-dev-client/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dev-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-client
  template:
    metadata:
      labels:
        app: dev-client
    spec:
      containers:
        - resources:
            limits:
              cpu: 100m
              ephemeral-storage: 200M
              memory: 100M
            requests:
              cpu: 100m
              ephemeral-storage: 200M
              memory: 100M
          terminationMessagePath: /dev/termination-log
          name: dev-client
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 1
            periodSeconds: 10
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: registry.gitlab.com/toofun-group/kaseb-web-client:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: private-reg
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
