arvan-paas/kaseb-dev-client/service.yml
kind: Service
apiVersion: v1
metadata:
  name: dev-client-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dev-client
  type: ClusterIP
